Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,7 @@
     "        return self._roster\n",
     "    \n",
     "    def add_student(self, name, grade):\n",
-    "        if \n",
+    "        if grade in self._roster\n",
     "        \n",
     "        "
    ]
