--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -92,8 +92,7 @@
     "        return self._roster\n",
     "    \n",
     "    def add_student(self, name, grade):\n",
-    "        if grade in self._roster:\n",
-    "            self._roster.ap\n",
+    "        if grade in self._roster\n",
     "        \n",
     "        "
    ]
