Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,9 @@
     "    \n",
     "    def add_student(self, name, grade):\n",
     "        if grade in self._roster:\n",
-    "            self._roster[grade].appe\n",
+    "            self._roster[grade].append(name)\n",
+    "        else:\n",
+    "            \n",
     "        \n",
     "        "
    ]
