Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,7 @@
     "        if grade in self._roster:\n",
     "            self._roster[grade].append(name)\n",
     "        else:\n",
-    "            \n",
+    "            return self.\n",
     "        \n",
     "        "
    ]
