Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,7 +97,7 @@
     "        else:\n",
     "            return self._roster\n",
     "        \n",
-    "    def grad\n",
+    "    def grade(self,)\n",
     "        \n",
     "        "
    ]
