Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -98,7 +98,7 @@
     "            return self._roster\n",
     "        \n",
     "    def grade(self, grade):\n",
-    "        return self.\n",
+    "        return self._roster[grade]\n",
     "        \n",
     "        "
    ]
