Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -100,6 +100,8 @@
     "    def grade(self, grade):\n",
     "        return self._roster[grade]\n",
     "    \n",
+    "    def sort_roster(self):\n",
+    "        \n",
     "        \n",
     "        "
    ]
