--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,8 @@
     "            new_dict[key].sort()\n",
     "        return new_dict\n",
     "    \n",
-    "    #don't understand sort_roster - what does copy.deepcopy do"
+    "    #don't understand sort_roster - what does copy.deepcopy do?\n",
+    "    "
    ]
   },
   {
