Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,8 +105,9 @@
     "            new_dict[key].sort()\n",
     "        return new_dict\n",
     "    \n",
+    "    \n",
     "    #don't understand sort_roster - what does copy.deepcopy do?\n",
-    "    "
+    "    #doesn't work for the last request"
    ]
   },
   {
